refactored project, and changed demo section

--- a/report/lastpaper/bibliography.bib
+++ b/report/lastpaper/bibliography.bib
@@ -26,6 +26,16 @@
   publisher={Elsevier}
 }
 
+@article{LeClercq2015325,
+author={Le Clercq, C.M.C. and Winkens, B. and Bakker, C.M. and Keulen, E.T.P. and Beets, G.L. and Masclee, A.A.M. and Sanduleanu, S.},
+title={Metachronous colorectal cancers result from missed lesions and non-compliance with surveillance},
+journal={Gastrointestinal Endoscopy},
+year={2015},
+volume={82},
+number={2},
+pages={325-333.e2}
+}
+
 @article{jullion2007robust,
   title={Robust specification of the roughness penalty prior distribution in spatially adaptive Bayesian P-splines models},
   author={Jullion, Astrid and Lambert, Philippe},
@@ -125,14 +135,14 @@ year={1994},
 publisher={Taylor \& Francis Group}
 }
 
-@article{crawford2003epidemiology,
-  title={Epidemiology of prostate cancer},
-  author={Crawford, E David},
-  journal={Urology},
-  volume={62},
+@article{loeb2014overdiagnosis,
+  title={Overdiagnosis and overtreatment of prostate cancer},
+  author={Loeb, Stacy and Bjurlin, Marc A and Nicholson, Joseph and Tammela, Teuvo L and Penson, David F and Carter, H Ballentine and Carroll, Peter and Etzioni, Ruth},
+  journal={European urology},
+  volume={65},
   number={6},
-  pages={3--12},
-  year={2003},
+  pages={1046--1055},
+  year={2014},
   publisher={Elsevier}
 }
 
@@ -287,14 +297,15 @@ isbn = {9781439872864}
   publisher={Oxford University Press}
 }
 
-@article{streitz1993endoscopic,
-  title={Endoscopic surveillance of Barrett's esophagus. Does it help?},
-  author={Streitz, Jr JM and Andrews, Jr CW and Ellis, Jr FH},
-  journal={The Journal of thoracic and cardiovascular surgery},
-  volume={105},
-  number={3},
-  pages={383--7},
-  year={1993}
+@article{weusten2017endoscopic,
+  title={Endoscopic management of Barrett’s esophagus: European Society of Gastrointestinal Endoscopy (ESGE) position statement},
+  author={Weusten, Bas and Bisschops, Raf and Coron, Emanuel and Dinis-Ribeiro, M{\'a}rio and Dumonceau, Jean-Marc and Esteban, Jos{\'e}-Miguel and Hassan, Cesare and Pech, Oliver and Repici, Alessandro and Bergman, Jacques and others},
+  journal={Endoscopy},
+  volume={49},
+  number={02},
+  pages={191--198},
+  year={2017},
+  publisher={{\copyright} Georg Thieme Verlag KG}
 }
 
 @incollection{steimle2017markov,
@@ -318,14 +329,25 @@ publisher={Wiley}
 }
 
 @article{tomer2019personalized,
-  title={Personalized schedules for surveillance of low-risk prostate cancer patients},
-  author={Tomer, Anirudh and Nieboer, Daan and Roobol, Monique J and Steyerberg, Ewout W and Rizopoulos, Dimitris},
-  journal={Biometrics},
-  volume={75},
-  number={1},
-  pages={153--162},
+  title={Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs},
+  author={Tomer, Anirudh and Rizopoulos, Dimitris and Nieboer, Daan and Drost, Frank-Jan and Roobol, Monique J and Steyerberg, Ewout W},
+  journal={Medical Decision Making},
+  volume={39},
+  number={5},
+  pages={499--508},
   year={2019},
-  publisher={Wiley Online Library}
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{tomer2020webapp,
+  title={A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk PCa Under Active Surveillance},
+  author={Tomer, Anirudh and Nieboer, Daan and Roobol, Monique J and Bjartell, Anders and Steyerberg, Ewout W and Rizopoulos, Dimitris and et al.},
+  journal={-},
+  volume={manuscript submitted},
+  number={-},
+  pages={-},
+  year={2020},
+  publisher={Elsevier}
 }
 
 @article{tsiatis2004joint,
@@ -786,8 +808,16 @@ publisher={Elsevier}
   publisher={Taylor \& Francis}
 }
 
-
-
+@article{coley2017prediction,
+  title={Prediction of the pathologic Gleason score to inform a personalized management program for prostate cancer},
+  author={Coley, R Yates and Zeger, Scott L and Mamawala, Mufaddal and Pienta, Kenneth J and Carter, H Ballentine},
+  journal={European urology},
+  volume={72},
+  number={1},
+  pages={135--141},
+  year={2017},
+  publisher={Elsevier}
+}
 
 @article{rizopoulosJMbayes,
 author = {Dimitris Rizopoulos},
