--- a/report/lastpaper/main_manuscript.tex
+++ b/report/lastpaper/main_manuscript.tex
@@ -58,6 +58,10 @@
 %\usepackage[figuresright]{rotating}
 \usepackage{graphicx}
 \usepackage[tbtags]{amsmath}
+\usepackage{soul}
+\usepackage[dvipsnames]{xcolor}
+
+\setstcolor{red}
 \DeclareMathOperator{\argmax}{arg\,max}
 \DeclareMathOperator{\argmin}{arg\,min}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
