--- a/report/lastpaper/supplementary/source_code.tex
+++ b/report/lastpaper/supplementary/source_code.tex
@@ -1,5 +1,6 @@
 % !TEX root =  ../supplementary.tex
 \section{Source Code}
+\label{sec:src}
 The R code for fitting the joint model to the PRIAS dataset, and for the simulation study are available at \url{https://github.com/anirudhtomer/prias/tree/master/src/decision_analytic}. We refer to this location as `DATA\_HOME' in the rest of this document.
 
 \subsection{Fitting the joint model to the PRIAS dataset}
